--- a/src/styles/pages/Dashboard.module.scss
+++ b/src/styles/pages/Dashboard.module.scss
@@ -11,9 +11,9 @@ $breakpoint-tablet: 768px;
         overflow:hidden
     }
     
-    .header {
-        grid-column: 2;
-        grid-row: 1 / 3;
+    header {
+        grid-column: 2/3;
+        grid-row: 1 / 2;
         width: 100%;
     }
     
